create: ai대화내용 리액트 수정(중)