@@ -3,7 +3,6 @@ package com.example.study_flow_server.global.config;
 import com.example.study_flow_server.jwt.JwtAuthenticationFilter;
 import com.example.study_flow_server.jwt.JwtUtil;
 import com.example.study_flow_server.global.security.CustomUserDetailsService;
-import jakarta.servlet.DispatcherType;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -32,61 +31,43 @@ public class SecurityConfig {
     private final CustomUserDetailsService userDetailsService;
 
     @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
-    }
+    public PasswordEncoder passwordEncoder() { return new BCryptPasswordEncoder(); }
 
     @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration configuration) throws Exception {
-        return configuration.getAuthenticationManager();
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
+        return config.getAuthenticationManager();
     }
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // CORS 설정 적용
-                .csrf(csrf -> csrf.disable()) // CSRF 비활성화 (API 방식 필수)
-                .sessionManagement(session -> session
-                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS) // JWT 사용을 위한 세션 미사용
-                )
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .csrf(csrf -> csrf.disable()) // POST 요청을 위해 필수
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
-                        .dispatcherTypeMatchers(DispatcherType.ASYNC).permitAll()
-                        // 1. 모든 사용자에게 허용할 경로들 (게시글 API 포함)
-                        .requestMatchers(
-                                "/api/auth/**", "/api/v1/ai/**", "/api/users/signup",
-                                "/api/auth/login", "/*.html", "/swagger-ui/**",
-                                "/v3/api-docs/**", "/email-send/**", "/api/v1/landmarks/**",
-                                "/ws-chat/**", "/api/posts/**"
-                        ).permitAll()
-                        // 2. 그 외 모든 요청은 인증 필요
+                        .requestMatchers(org.springframework.http.HttpMethod.OPTIONS, "/**").permitAll()
+                        .requestMatchers("/api/auth/**", "/api/users/signup", "/api/v1/landmarks/**").permitAll()
+                        .requestMatchers("/api/ai/**").authenticated() // 혹은 .authenticated()
                         .anyRequest().authenticated()
                 )
-                // 3. JWT 필터를 UsernamePasswordAuthenticationFilter 앞에 추가
+                // JWT 필터 위치 확인
                 .addFilterBefore(new JwtAuthenticationFilter(jwtUtil, userDetailsService), UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
-    // CORS 설정: 리액트 앱이 서버 응답 헤더를 읽을 수 있게 함
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-
-        // 리액트 서버 주소 허용
-        configuration.setAllowedOrigins(List.of("http://localhost:3000"));
-        // 모든 HTTP 메서드 허용
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        // 모든 헤더 허용
-        configuration.setAllowedHeaders(List.of("*"));
-
-        // ⭐ 매우 중요: 리액트(브라우저)가 Authorization 헤더를 읽을 수 있도록 노출
-        configuration.setExposedHeaders(List.of("Authorization"));
-
-        // 쿠키/인증 정보 포함 허용
-        configuration.setAllowCredentials(true);
+        CorsConfiguration config = new CorsConfiguration();
+        config.setAllowedOrigins(List.of("http://localhost:3000"));
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(List.of("*"));
+        // 🟢 브라우저가 응답 내용을 읽을 수 있도록 명시적으로 허용
+        config.setExposedHeaders(Arrays.asList("Authorization", "Content-Type", "Access-Control-Allow-Origin"));
+        config.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+        source.registerCorsConfiguration("/**", config);
         return source;
     }
 }
